--- a/index.html
+++ b/index.html
@@ -14,42 +14,123 @@
         <header>
             <a href="#"><i class="fa-solid fa-house"></i></a>
              online shopping
+             <a href="#kids">kids</a>
+             <a href="#women">Women</a>
+             <a href="#">Men</a>
               <input type="text" placeholder="Search..">                
               <a href="signup.html">Signup</a>
               <a href="#"><i class="fa-solid fa-cart-shopping"></i>&nbsp Cart</a>
               <a href="login.html"><i class="fa-solid fa-user"></i>&nbsp login</a>
         </header>
+        <section>
+        <div class="animation-image">
+            <div class="image__text">
+              <h1 style="font-size:50px">shop with smile</h1>
+            </div>
+        <div>
+        </section>
         <main>
+            <h2 id="kids">kids product</h2>
+            <section class="main">
             <div class="product card">
-                <img src="images\kid.jpg" alt="Product 1">
-                <p>kids wear</p>
-                <button>view items</button>
+                <img src="images\kid1.jpg" alt="Product 1">
+                <p>floral T-Shirt<br>350 DKK</p>
+                <a href="productdetails.html"><button>Add to cart</button></a>
             </div>
             <div class="product card">
-                <img src="images\men.jpg" alt="Product 1">
-                <p>Gents wear</p>
-                <button>view items</button>
+                <img src="images\kid2.jpg" alt="Product 1">
+                <p>Frock<br>200 DKK</p>
+                <button>Add to cart</button>
             </div>
             <div class="product card">
-                <img src="images\image1.jpg" alt="Product 1">
-                <p>women wear</p>
-                <button>view items</button>
+                <img src="images\kid3.jpg" alt="Product 1">
+                <p>Jacket<br>400 DKK</p>
+                <button>Add to cart</button>
             </div>
             <div class="product card">
-                <img src="images\accessory1.jpg" alt="Product 1">
-                <p>women fashion accessory</p>
-                <button>view items</button>
+                <img src="images\kid4.jpg" alt="Product 1">
+                <p>White T-shirt<br>250 DKK</p>
+                <button>Add to cart</button>
             </div>
             <div class="product card">
-                <img src="images\accessory2.jpg" alt="Product 1">
-                <p>men fashion accesory</p>
-                <button>view items</button>
+                <img src="images\kid5.jpg" alt="Product 1">
+                <p>Onesie<br>300 DKK</p>
+                <button>Add to cart</button>
             </div>
             <div class="product card">
-                <img src="images\accessory3.jpg" alt="Product 1">
-                <p>kids fashion accessory</p>
-                <button>view items</button>
+                <img src="images\kid6.jpg" alt="Product 1">
+                <p>white T-shirt<br>200 DKK</p>
+                <button>Add to cart</button>
             </div>
+            </section>
+            <section>
+            <h2 id="women">Women</h2>
+            <section class="main">
+            <div class="product card">
+                <img src="images\women1.jpg" alt="Product 1">
+                <p>Ethnic wear<br>400 DKK</p>
+                <a href="productdetails.html"><button>Add to cart</button></a>
+            </div>
+            <div class="product card">
+                <img src="images\women2.jpg" alt="Product 1">
+                <p>Salwar<br>500 Dkk</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="product card">
+                <img src="images\women3.jpg" alt="Product 1">
+                <p>T-shirt<br> 200 DKK</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="product card">
+                <img src="images\women4.jpg" alt="Product 1">
+                <p>Sweater<br>400 DKK</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="product card">
+                <img src="images\women5.jpg" alt="Product 1">
+                <p>Jacket<br>600 DKK</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="product card">
+                <img src="images\women6.jpg" alt="Product 1">
+                <p>Jacket<br>600 Dkk</p>
+                <button>Add to cart</button>
+            </div>
+            </section>
+            <section>
+                <h2 id="women">Men</h2>
+                <section class="main">
+                <div class="product card">
+                    <img src="images\men1.jpg" alt="Product 1">
+                    <p>T-Shirt<br>300 DKK</p>
+                    <a href="productdetails.html"><button>Add to cart</button></a>
+                </div>
+                <div class="product card">
+                    <img src="images\men2.jpg" alt="Product 1">
+                    <p>Jeans<br>500 DKK</p>
+                    <button>Add to cart</button>
+                </div>
+                <div class="product card">
+                    <img src="images\men3.jpg" alt="Product 1">
+                    <p>Formal wear<br>300 Dkk</p>
+                    <button>Add to cart</button>
+                </div>
+                <div class="product card">
+                    <img src="images\men1.jpg" alt="Product 1">
+                    <p>T-shirt <br>300 DKK</p>
+                    <button>Add to cart</button>
+                </div>
+                <div class="product card">
+                    <img src="images\men2.jpg" alt="Product 1">
+                    <p>Jeans<br>500 DKK</p>
+                    <button>Add to cart</button>
+                </div>
+                <div class="product card">
+                    <img src="images\men3.jpg" alt="Product 1">
+                    <p>Formal wear<br>300 Dkk</p>
+                    <button>Add to cart</button>
+                </div>
+                </section>
         </main>
         <footer>
             <div>
