--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
@@ -29,10 +33,10 @@
             <li>
                 <h1>Zapatoos</h1>
             </li>
-            <li><a href="#">Latest</a></li>
-            <li><a href="#">Brands</a></li>
-            <li><a href="#">Shoes</a></li>
-            <li><a href="#">Winter Sale</a></li>
+            <li class="nav-links__items"><a href="#">Latest</a></li>
+            <li class="nav-links__items"><a href="#">Brands</a></li>
+            <li class="nav-links__items"><a href="#">Shoes</a></li>
+            <li class="nav-links__items"><a href="#">Winter Sale</a></li>
 
             <div class="right-side">
                 <li><button class="log">Login</button></li>
@@ -47,46 +51,87 @@
 
 
     <!-- product /start page begins  -->
-    <main>
-        <div class="container">
-            <div class="product">
-                <div class="shop-button"><i class='bx bx-shopping-bag'></i></div>
-                <img src="Images/Nike_Air.jpg" alt="Nike Air">
-                <h1 class="product__name">Nike Air Max</h1>
-                <h2 class="product__price">$500</h2>
-                <p class="product__discount">Flat 5% off</p>
-                <p class="product__discount-price">$1000</p>
-            </div>
-            <div class="product">
-                <img src="Images/Nike_Flyknit.jpg" alt="">
-                <h1 class="product__name">Nike Air Max</h1>
-                <h2 class="product__price">$500</h2>
-                <p class="product__discount">Flat 5% off</p>
-                <p class="product__discount-price">$1000</p>
-            </div>
-            <div class="product">
-                <img src="Images/Nike_Green.jpg" alt="">
-                <h1 class="product__name">Nike Air Max</h1>
-                <h2 class="product__price">$500</h2>
-                <p class="product__discount">Flat 5% off</p>
-                <p class="product__discount-price">$1000</p>
-            </div>
+    <div class="container">
+        <div class="product">
+            <i class='bx bx-shopping-bag'></i>
+            <img src="Images/Nike_Air.jpg" alt="Nike Air">
+            <h1 class="product__name">Nike Air</h1>
+            <h2 class="product__price">$500</h2>
+            <p class="product__discount">Flat 5% off</p>
+            <p class="product__discount-price">$1000</p>
         </div>
-    </main>
+        <div class="product">
+            <i class='bx bx-shopping-bag'></i>
+            <img src="Images/Nike_Flyknit.jpg" alt="">
+            <h1 class="product__name">Nike Flyknit</h1>
+            <h2 class="product__price">$500</h2>
+            <p class="product__discount">Flat 5% off</p>
+            <p class="product__discount-price">$1000</p>
+        </div>
+        <div class="product">
+            <i class='bx bx-shopping-bag'></i>
+            <img src="Images/Nike_Green.jpg" alt="">
+            <h1 class="product__name">Nike Swoosh</h1>
+            <h2 class="product__price">$500</h2>
+            <p class="product__discount">Flat 5% off</p>
+            <p class="product__discount-price">$1000</p>
+        </div>
+        <div class="product">
+            <i class='bx bx-shopping-bag'></i>
+            <img src="Images/Nike_Air.jpg" alt="Nike Air">
+            <h1 class="product__name">Nike Air</h1>
+            <h2 class="product__price">$500</h2>
+            <p class="product__discount">Flat 5% off</p>
+            <p class="product__discount-price">$1000</p>
+        </div>
+        <div class="product">
+            <i class='bx bx-shopping-bag'></i>
+            <img src="Images/Nike_Flyknit.jpg" alt="">
+            <h1 class="product__name">Nike Flyknit</h1>
+            <h2 class="product__price">$500</h2>
+            <p class="product__discount">Flat 5% off</p>
+            <p class="product__discount-price">$1000</p>
+        </div>
+        <div class="product">
+            <i class='bx bx-shopping-bag'></i>
+            <img src="Images/Nike_Green.jpg" alt="">
+            <h1 class="product__name">Nike Swoosh</h1>
+            <h2 class="product__price">$500</h2>
+            <p class="product__discount">Flat 5% off</p>
+            <p class="product__discount-price">$1000</p>
+        </div>
+    </div>
 
 
 
     <!-- product /start page ends  -->
 
     <!-- footer begins  -->
-    <footer>footer section</footer>
+    <footer>
+        <hr />
+        <div class="footer-col-1">
+            <ul>
+                <li><a href="#">Latest</a></li>
+                <li><a href="#">Brands</a></li>
+                <li><a href="#">Shoes</a></li>
+                <li><a href="#">Winter Sale</a></li>
+            </ul>
+        </div>
+        <div class="footer-col-2">
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            </ul>
+        </div>
+    </footer>
 
 
 
     <!-- footer ends  -->
 
 
-
+    <script src="index.js"></script>
 </body>
 
 </html>
