--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
             <label for="search-box" class="fas fa-search"></label>
         </div>
 
+        <div class="cart_item_container">
+            <div class="cart_item">
+                <span class="fas fa-times"></span>
+                <img src="/images/dalgona.jpg" alt="Dalgona" width="450px" height="300px">
+                <div class="cart_content">
+                    <h3>Dalgona</h3>
+                    <div class="cart_item_price">$25</div>
+
+                    <h5>Korean Coffee Drink</h5>
+                </div>
+
+            </div>
+        </div>
+
     </header>
 
 
