--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
     </header>
 
 
+    <main>
+
+        <h1>Fika Time</h1>
+
+        <img src="/images/55.png" alt="Fika_time">
+
+    </main>
+    
+
+
 
     
 
