--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casavile Furniture & Accessories</title>
-    <link rel="stylesheet" href="style-cart.css">
+    <link rel="stylesheet" href="/CSS/cart.css">
 
     <!-- icon link starts here  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -55,7 +55,7 @@
       </div>
       <div class="cart-information">
         <div class="container">
-          <h3>Your order:</h3>
+          <h2>Your order:</h2>
           <table class="table__info">
               <tr class="table-row">
                  <td class="cart__item">Product 1</th>
