--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
             <div class="nav-right">
                 <ul class="list-elements">
-                    <li class="list__item"><a class="nav-link" href="login.html" target="_blank"><i class="fa-solid fa-user list__icon"></i> Login</a></li>
+                    <li class="list__item"><a class="nav-link" href="/Pages/login.html" target="_blank"><i class="fa-solid fa-user list__icon"></i> Login</a></li>
                     <li class="list__item"><a class="nav-link" href="#main-footer"><i class="fa-solid fa-address-card list__icon"></i> Contacts</a></li>
-                    <li class="list__item"><a class="nav-link" href="cart.html" target="_blank"><i class="fa-solid fa-cart-shopping list__icon"></i> Cart</a></li>
+                    <li class="list__item"><a class="nav-link" href="/Pages/cart.html" target="_blank"><i class="fa-solid fa-cart-shopping list__icon"></i> Cart</a></li>
                 </ul>
             </div>
         </div>
@@ -247,12 +247,13 @@
                 <p class="banner-heading">Subscribe to get best offers</p>
                 <p class="decription">Once a month we will sent you personal offers based on your prefers. Get the best offer first</p>
                 <form class="subscribtion-bar">                
-                    <label for="serch"></label>
-                    <input id="serch" class="serch" type="text" placeholder="Enter your email">
+                    <label for="email"></label>
+                    <input id="email" class="email" type="text" placeholder="Enter your email">
                     <button type="submit">Stay with us</button>
                 </form>
             </div>
          </section>
+
     </main>
     <!-- main section ends here  -->
 
@@ -279,5 +280,12 @@
                 </div>
     </footer>
     <!-- footer ends here -->
+    <div class="button-box">
+        <div class="puls">
+            <div class="phone">
+                <i class="fa-solid fa-phone"></i>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
