--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <label for="search-box" class="fas fa-search"></label>
         </div>
 
-        <div class="cart_item_container">
+        <!--div class="cart_item_container">
             <div class="cart_item">
                 <span class="fas fa-times"></span>
                 <img src="/images/dalgona.jpg" alt="Dalgona" width="450px" height="300px">
@@ -69,18 +69,25 @@
                 </div>
 
             </div>
-        </div>
+        </div--->
 
     </header>
 
+    <br><br><br>
 
-    <main>
 
-        <h1>Fika Time</h1>
+    <!---main--->
 
-        <img src="/images/55.png" alt="Fika_time">
+        <div class="middle">
+        <h1 class="fika">Fika Time</h1>
+        <br>
+        <img src="/images/55.png" alt="Fika_time" width="600px" height="400px"><br><br>
+        <button><a href="/menu.html">Check Menu</a></button><br><br>
+        <p>Lorem ipsum, dolor sit amet consectetur ipsum molestiae? Impedit explicabo officia qui ratione necessitatibus obcaecati, ad dolore consequatur repellat. Hic, sunt.</p>
 
-    </main>
+        </div>
+
+    <!----/main---->
     
 
 
