fixde links between pages

--- a/Pages/product.html
+++ b/Pages/product.html
@@ -176,18 +176,14 @@
     <!-- main section ends here  -->
 
 <!-- footer starts here  -->
-<footer id="main-footer">
+    <footer id="main-footer">
         <div class="nav-left">
             <ul class="list-elements">
                 <li class="list__item"><a href="#main-nav"><i class="fa-solid fa-house list__icon"></i> Home</a></li>
-                <li class="list__item"><a class="nav-link" href="#Furniture">Furniture</a></li>
-                <li class="list__item"><a class="nav-link" href="Acceccories">Accessories</a></li>
+                <li class="list__item"><p class="copywright">Designed by Eugene &copy; Copyright 2023</p></li>
             </ul>
         </div>
 
-        <div class="nav-midle">
-            <p class="copywright">Designed by Eugene &copy; Copyright 2023</p>
-        </div>
 
         <div class="nav-right">
             <ul class="list-elements">
