--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="container">
                     <div class="items-list">
                         <div class="card">
-                            <a href="product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
+                            <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
                             <h4 class="card__heading">Item1</h4>
                             <p class="card__description">Lorem ipsum dolor sit amet.</p>
                             <div class="card__price">
@@ -101,7 +101,7 @@
                         </div>
 
                         <div class="card">
-                            <a href="product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
+                            <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
                             <h4 class="card__heading">Item1</h4>
                             <p class="card__description">Lorem ipsum dolor sit amet.</p>
                             <div class="card__price">
@@ -113,7 +113,7 @@
                         </div>
 
                         <div class="card">
-                            <a href="product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
+                            <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
                             <h4 class="card__heading">Item1</h4>
                             <p class="card__description">Lorem ipsum dolor sit amet.</p>
                             <div class="card__price">
@@ -125,7 +125,7 @@
                         </div>
 
                         <div class="card">
-                            <a href="product.html"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
+                            <a href="/Pages/product.html"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
                             <h4 class="card__heading" target="_blank">Item1</h4>
                             <p class="card__description">Lorem ipsum dolor sit amet.</p>
                             <div class="card__price">
@@ -137,7 +137,7 @@
                         </div>
 
                         <div class="card">
-                            <a href="product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
+                            <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
                             <h4 class="card__heading">Item1</h4>
                             <p class="card__description">Lorem ipsum dolor sit amet.</p>
                             <div class="card__price">
@@ -149,7 +149,7 @@
                         </div>
 
                         <div class="card">
-                            <a href="product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
+                            <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img"></a>
                             <h4 class="card__heading">Item1</h4>
                             <p class="card__description">Lorem ipsum dolor sit amet.</p>
                             <div class="card__price">
@@ -168,7 +168,7 @@
             <div class="container">
                 <div class="items-list">
                     <div class="card">
-                        <a href="product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
+                        <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
                         <h4 class="card__heading">Item1</h4>
                         <p class="card__description">Lorem ipsum dolor sit amet.</p>
                         <div class="card__price">
@@ -180,7 +180,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
+                        <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
                         <h4 class="card__heading">Item1</h4>
                         <p class="card__description">Lorem ipsum dolor sit amet.</p>
                         <div class="card__price">
@@ -192,7 +192,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
+                        <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
                         <h4 class="card__heading">Item1</h4>
                         <p class="card__description">Lorem ipsum dolor sit amet.</p>
                         <div class="card__price">
@@ -204,7 +204,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
+                        <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
                         <h4 class="card__heading">Item1</h4>
                         <p class="card__description">Lorem ipsum dolor sit amet.</p>
                         <div class="card__price">
@@ -216,7 +216,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
+                        <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
                         <h4 class="card__heading">Item1</h4>
                         <p class="card__description">Lorem ipsum dolor sit amet.</p>
                         <div class="card__price">
@@ -228,7 +228,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
+                        <a href="/Pages/product.html" target="_blank"><img src="/img/index-img/accessories.jpg" alt="furniture pic" class="card-img"></a>
                         <h4 class="card__heading">Item1</h4>
                         <p class="card__description">Lorem ipsum dolor sit amet.</p>
                         <div class="card__price">
@@ -263,7 +263,7 @@
                     <ul class="list-elements">
                         <li class="list__item"><a href="#main-nav"><i class="fa-solid fa-house list__icon"></i> Home</a></li>
                         <li class="list__item"><a class="nav-link" href="#Furniture">Furniture</a></li>
-                        <li class="list__item"><a class="nav-link" href="Acceccories">Accessories</a></li>
+                        <li class="list__item"><a class="nav-link" href="#Acceccories">Accessories</a></li>
                     </ul>
                 </div>
     
