fix more numbers

--- a/ecommerce.html
+++ b/ecommerce.html
@@ -51,7 +51,7 @@
         <div class="cards">
             <div class="card__one">
                 <div class="card__img">
-                    <span class="card__discount-tag">30%</span>
+                    <span class="card__discount-tag">- 30%</span>
                     <img src="https://i.postimg.cc/TYzrpfMF/alex-perri-At-EKm5-PGE-unsplash.jpg" alt="picture of a sweater">
                     <button class="card__btn">Buy</button>
                 </div>
@@ -77,7 +77,7 @@
             </div>
             <div class="card__three">
                 <div class="card__img">
-                    <span class="card__discount-tag">30%</span>
+                    <span class="card__discount-tag">- 30%</span>
                     <img src="https://i.postimg.cc/Pqtvwq63/jason-strull-c-J3-KPb-VJP5s-unsplash.jpg" alt="picture of a sweater">
                     <button class="card__btn">Buy</button>
                 </div>
@@ -103,7 +103,7 @@
             </div>
             <div class="card__five">
                 <div class="card__img">
-                    <span class="card__discount-tag">30%</span>
+                    <span class="card__discount-tag">- 30%</span>
                     <img src="https://i.postimg.cc/3ry1RL0y/joanna-nix-walkup-h2pn-XHMz8-YM-unsplash.jpg" alt="picture of a sweater">
                     <button class="card__btn">Buy</button>
                 </div>
@@ -141,7 +141,7 @@
             </div>
             <div class="card__eight">
                 <div class="card__img">
-                    <span class="card__discount-tag">10%</span>
+                    <span class="card__discount-tag">- 10%</span>
                     <img src="https://i.postimg.cc/SQWXD8wT/sayo-garcia-Bjhla-WX7b-AA-unsplash.jpg
                     " alt="picture of a sweater">
                     <button class="card__btn">Buy</button>
@@ -168,7 +168,7 @@
             </div>
             <div class="card__ten">
                 <div class="card__img">
-                    <span class="card__discount-tag">50%</span>
+                    <span class="card__discount-tag">- 50%</span>
                     <img src="https://i.postimg.cc/nhwMC1Dz/ulla-shinami-w0-NFQLwkk0c-unsplash.jpg" alt="picture of a sweater">
                     <button class="card__btn">Buy</button>
                 </div>
@@ -194,7 +194,7 @@
             </div>
             <div class="card__twelve">
                 <div class="card__img">
-                    <span class="card__discount-tag">40%</span>
+                    <span class="card__discount-tag">- 40%</span>
                     <img src="https://i.postimg.cc/2690tMbY/elizeu-dias-mcdao5-RP4h-I-unsplash.jpg" alt="picture of a sweater">
                     <button class="card__btn">Buy</button>
                 </div>
